# vim2vid

./: .gitignore  Dockerfile  LICENSE  README.md  config_example.json  default.json  default_greeting.json  pyproject.toml  vim2vid.py
.github/workflows/: docker-build.yml
examples/: greeting_example.json
vim2vid/: __init__.py
