[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vim2vid"
version = "1.0.0"
description = "Generate realistic VIM typing videos from text files"
readme = "README.md"
authors = [
    {name = "Marc", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["vim", "video", "animation", "typing", "social-media", "linkedin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
vim2vid = "vim2vid:main"

[tool.setuptools]
py-modules = ["vim2vid"]

[project.urls]
Homepage = "https://github.com/guybrush1984/vim2vid"
Documentation = "https://github.com/guybrush1984/vim2vid#readme"
Issues = "https://github.com/guybrush1984/vim2vid/issues"


[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true